old_tests/parser/invalid/013-dangling-elif.man
def main()
    foo()
    elif bar()
        baz()
    end
end
